SONAR-17706 Remove module related columns in Components and all its uses